--- a/config.env
+++ b/config.env
@@ -1,6 +1,7 @@
-SESSION_ID=05_08_H_E_R_M_I_T_MMTC8WV
-AUTH_FILE=session
-SUDO=923051391007
-PREFIX=.
-MODE=public
-LOG_MSG=true
+SESSION_ID = '05_08_H_E_R_M_I_T_MMTC8WV'
+AUTH_FILE = 'session'
+SUDO = '923051391007'
+PREFIX = '.'
+MODE = 'public'
+LOG_MSG = 'true'
+OWNER_NUMBER = '923051391007'
